# fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  base_class.py  docker-compose.yaml  env.example  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 674bb3e0bb46_.py
core/: config.py  exceptions.py  models.py  repositories.py  routers.py  session.py  utils.py
events/: models.py  schemas.py
firebase/: services.py
src/core/: settings.py  urls.py
src/lawyer/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/lawyer/migrations/: 0001_initial.py  0002_import_data.py
src/lawyer/static/css/: bootstrap.min.css  style.css
src/lawyer/static/js/: main.js
src/lawyer/static/scss/: _about.scss
src/lawyer/templates/: home-cn.html  home-en.html  index.html  success-cn.html  success-en.html  success.html
src/static/css/: bootstrap.min.css  style.css
src/static/scss/: _slider.scss
users/: models.py  repositories.py  routers.py  schemas.py  services.py
